sourceCompatibility = 15
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

sourceSets.main.java.srcDirs = [ "src/" ]
sourceSets.test.java.srcDirs = [ "test/java/" ]

eclipse.project.name = appName + "-core"
